fixed alignment

--- a/classlist-frontend/src/index.css
+++ b/classlist-frontend/src/index.css
@@ -1,6 +1,8 @@
 .student-list {
   border: 1px solid black;
   border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 td,
@@ -13,6 +15,7 @@ body {
   background-color: #2cbae7;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: rgb(245, 245, 245);
+  text-align: center;
 }
 
 h1 {
